# PluralsightCpp

C++ 17 Beyond the Basics/: CMakeLists.txt  Containers.cpp  Resource.cpp  Resource.h
C++ 17 Beyond the Basics/Lambdas/Captures/: CMakeLists.txt  Lambdas.cpp  Resource.h
C++ 17 Beyond the Basics/Lambdas/SimpleLambda/: CMakeLists.txt  Lambdas.cpp
C++ 17 Beyond the Basics/ListDemo/: CMakeLists.txt  ListAndVector.cpp
C++ 17 Beyond the Basics/STL Algorithms/Expressivity/: Algorithms.cpp  CMakeLists.txt
C++ 17 Beyond the Basics/STL Containers/Vector/: Resource.cpp
C++ 17 Beyond the Basics/VectorDemo/: CMakeLists.txt  Containers.cpp
